Ability to post inside topics

--- a/app/assets/javascripts/backbone/templates/topics/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/topics/show.jst.ejs
@@ -8,5 +8,12 @@
   <%= body %>
 </p>
 
+<p>Posts</p>
+
+<div id="posts"></div>
+
+<p>Add post</p>
+<input type="text" id="new_post_body">
+<input type="submit" id="new_post_submit" value="Add post">
 
 <a href="#/index">Back</a>
