Topics index styled

--- a/app/assets/javascripts/backbone/templates/topics/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/topics/index.jst.ejs
@@ -1,11 +1,6 @@
-<h1>Listing topics</h1>
+<h1>Topics</h1>
 
-<table id="topics-table">
-  <tr>
-    <th>Title</th>
-  </tr>
+<table class="table" id="topics-index-table">
 </table>
 
-<br/>
-
-<a href="#/topics/new">New Topic</a>
+<a href="#/topics/new" class="btn btn-primary btn-large"><i class="icon-white icon-plus"></i> Create New Topic</a>
