--- a/app/assets/javascripts/backbone/templates/topics/topic.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/topics/topic.jst.ejs
@@ -1,1 +1,1 @@
-<td><a href="#/topics/<%= id %>"><%= title %></a></td>
+<td><a href="#/topics/<%= id %>"><strong><%= title %></strong></a></td><td><%= posts.length %> answers</td>
