Creating Topic in modal window

--- a/app/assets/javascripts/backbone/templates/topics/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/topics/index.jst.ejs
@@ -3,4 +3,4 @@
 <table class="table" id="topics-index-table">
 </table>
 
-<a href="#/topics/new" class="btn btn-primary btn-large"><i class="icon-white icon-plus"></i> Create New Topic</a>
+<a href="#/topics/new" class="btn btn-primary btn-large" id="new-topic-button"><i class="icon-white icon-plus"></i> Create New Topic</a>
