--- a/app/assets/javascripts/backbone/templates/topics/new.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/topics/new.jst.ejs
@@ -1,20 +1,23 @@
-<h1>New topic</h1>
-
-<form id="new-topic" name="topic">
-  <div class="field">
-    <label for="title">Title</label>
-    <input type="text" name="title" id="title" value="<%= title %>" >
+<div class="modal hide fade">
+  <div class="modal-header">
+    <button type="button" class="close close-modal" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3>Modal header</h3>
   </div>
+  <div class="modal-body">
+    <form id="new-topic" name="topic">
+      <div class="field">
+        <label for="title">Title</label>
+        <input type="text" name="title" id="title" value="<%= title %>" >
+      </div>
 
-  <div class="field">
-    <label for="body">Body </label>
-    <input type="text" name="body" id="body" value="<%= body %>" >
+      <div class="field">
+        <label for="body">Body </label>
+        <input type="text" name="body" id="body" value="<%= body %>" >
+      </div>
+    </form>
   </div>
-
-  <div class="actions">
-    <input type="submit" value="Create Topic" />
+  <div class="modal-footer">
+    <a href="#" class="btn close-modal">Close</a>
+    <a href="#" class="btn btn-primary" id="save-topic-button">Save changes</a>
   </div>
-
-</form>
-
-<a href="#/index">Back</a>
+</div>
